feat: add crud trucks and fix user endpoint
